# RenderV3

./: .gitignore  Doxyfile  README.md
MaterialDatabase/: CMakeLists.txt
MaterialDatabase/Source/: AluminiumPlate.cpp  Ceramic.cpp  Conductor.cpp  Dielectric.cpp  Glass.cpp  Granite.cpp  WallTiles.cpp  main.cpp
MaterialDatabase/材质/: Materials.db  中空玻璃.txt  墙砖.txt  材质.txt  氟碳漆铝板.txt  花岗岩.txt  陶板.txt
Modules/RHIForQt/: CMakeLists.txt
Pbrt/: CMakeLists.txt
Pbrt/Source/: .gitlab-ci.yml  CMakeLists.txt  Init.cpp  Init.h  Mmath.h  cpu_gpu.h  main.cpp
Pbrt/Source/BxDF/: BSDF.h  BSDFSample.h  BxDF.cpp  BxDF.h  ConductorBxDF.cpp  ConductorBxDF.h  DielectricBxDF.cpp  DielectricBxDF.h  DiffuseBxDF.cpp  DiffuseBxDF.h  GlassBxDF.cpp  GlassBxDF.h  GraniteBxDF.cpp  GraniteBxDF.h  MirrorBxDF.cpp  MirrorBxDF.h
Pbrt/Source/Camera/: Camera.cpp  Camera.h  CameraBase.cpp  CameraBase.h  CameraBaseParameters.cpp  CameraBaseParameters.h  CameraRay.h  CameraSample.h  CameraTransform.cpp  CameraTransform.h  PerspectiveCamera.cpp  PerspectiveCamera.h  ProjectiveCamera.h  SampledWavelengths.h
Pbrt/Source/Container/: Array.h  Array2D.h  InlinedVector.cpp  InlinedVector.h  Span.h  Vector.h
Pbrt/Source/CookTorrance/: GeometryFunction.h  NormalDistributionFunction.h  TrowbridgeReitzDistribution.cpp  TrowbridgeReitzDistribution.h
Pbrt/Source/Film/: Film.cpp  Film.h  FilmBase.h  FilmBaseParameters.h  RGBFilm.h
Pbrt/Source/Glad/: glad.c
Pbrt/Source/HDRI/: Rgbe.cpp
Pbrt/Source/Image/: Image.cpp  Image.h  fpng.cpp  fpng.h  ppm.cpp  ppm.h
Pbrt/Source/Integrator/: GlassIntegrator.cpp  GlassIntegrator.h  GlassIntegrator2.cpp  GlassIntegrator2.h  Integrator.cpp  Integrator.h  NullIntegrator.cpp  NullIntegrator.h  PathIntegrator.cpp  PathIntegrator.h  TestGGX.cpp  TestGGX.h  TestHDR.cpp  TestHDR.h  TestIntegrator.cpp  TestIntegrator.h  TestIntegrator10.cpp  TestIntegrator10.h  TestIntegrator11.cpp  TestIntegrator11.h  TestIntegrator12.cpp  TestIntegrator12.h  TestIntegrator13.cpp  TestIntegrator13.h  TestIntegrator14.cpp  TestIntegrator14.h  TestIntegrator2.cpp  TestIntegrator2.h  TestIntegrator3.cpp  TestIntegrator3.h  TestIntegrator4.cpp  TestIntegrator4.h  TestIntegrator5.cpp  TestIntegrator5.h  TestIntegrator6.cpp  TestIntegrator6.h  TestIntegrator7.cpp  TestIntegrator7.h  TestIntegrator8.cpp  TestIntegrator8.h  (+6 more)
Pbrt/Source/Intersection/: Interaction.h  Intersection.cpp  Intersection.h  SurfaceInteraction.cpp  SurfaceInteraction.h
Pbrt/Source/Light/: AmbientLight.cpp  AmbientLight.h  DistantLight.cpp  DistantLight.h  HDRLight.cpp  HDRLight.h  Light.cpp  Light.h  LightBase.cpp  LightBase.h  LightLiSample.h  LightSampleContext.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Pbrt/Source/Loader/: Loader.cpp  Loader.h
Pbrt/Source/Material/: ConductorMaterial.cpp  ConductorMaterial.h  DielectricMaterial.cpp  DielectricMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  GlassMaterial.cpp  GlassMaterial.h  GraniteMaterial.cpp  GraniteMaterial.h  Material.cpp  Material.h  MirrorMaterial.cpp  MirrorMaterial.h  NormalMap.h
Pbrt/Source/Math/: AnimatedTransform.cpp  AnimatedTransform.h  CompensatedFloat.h  EqualAreaMapping.cpp  EqualAreaMapping.h  Float.h  Intersection.h  LowDiscrepancy.cpp  LowDiscrepancy.h  Math.h  Noise.h  Primes.cpp  Primes.h  Quaternion.h  SDF.h  SampleSphericalMap.cpp  SampleSphericalMap.h  Sampling.cpp  Sampling.h  Scattering.h  SobolMatrices.cpp  SobolMatrices.h  SquareMatrix.cpp  SquareMatrix.h  Transform.cpp  Transform.h  Util.h
Pbrt/Source/Medium/: HomogeneousMedium.h  Medium.h
Pbrt/Source/Memory/: MemoryBuffer.h  MemoryResource.cpp  MemoryResource.h  PolymorphicAllocator.cpp  PolymorphicAllocator.h
Pbrt/Source/Mesh/: Mesh.cpp  Mesh.h
Pbrt/Source/Primitive/: AnimatedPrimitive.cpp  AnimatedPrimitive.h  BVHAggregate.cpp  BVHAggregate.h  GeometricPrimitive.cpp  GeometricPrimitive.h  KdTreeAggregate.cpp  KdTreeAggregate.h  Primitive.cpp  Primitive.h  SimplePrimitive.cpp  SimplePrimitive.h  TransformedPrimitive.cpp  TransformedPrimitive.h
Pbrt/Source/Ray/: Ray.h
Pbrt/Source/Render/: HDRRender.cpp  HDRRender.h  Render.cpp  Render.h  RenderBuffer.cpp  RenderBuffer.h
Pbrt/Source/Sampler/: HaltonSampler.cpp  HaltonSampler.h  Sampler.cpp  Sampler.h
Pbrt/Source/Scene/: BasicSceneBuilder.cpp  BasicSceneBuilder.h  CameraSceneEntity.h  GraphicsState.cpp  GraphicsState.h  InstanceSceneEntity.cpp  InstanceSceneEntity.h  LightSceneEntity.cpp  LightSceneEntity.h  Model.h  ObjectDefinitionSceneEntity.cpp  ObjectDefinitionSceneEntity.h  ObjectUVScaleDefinitionSceneEntity.h  Scene.cpp  Scene.h  SceneData.cpp  SceneData.h  SceneEntity.cpp  SceneEntity.h  SceneWrapper.cpp  SceneWrapper.h  ShapeSceneEntity.cpp  ShapeSceneEntity.h
Pbrt/Source/Shape/: Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Pbrt/Source/Texture/: ImageTextureBase.h  MaterialEvalContext.h  Mipmap.cpp  Mipmap.h  RGB.cpp  RGB.h  SpectrumConstTexture.cpp  SpectrumConstTexture.h  SpectrumImageTexture.cpp  SpectrumImageTexture.h  SpectrumNoiseTexture.cpp  SpectrumNoiseTexture.h  SpectrumRandomImageTexture.cpp  SpectrumRandomImageTexture.h  SpectrumTexture.cpp  SpectrumTexture.h  TextureEvalContext.h  TextureMapping2D.h  UniversalTextureEvaluator.cpp  UniversalTextureEvaluator.h
Pbrt/Source/Type/: Bounds2.h  Bounds3.h  Interval.h  Normal2.h  Normal3.h  Point2.h  Point3.h  (+9 more)
RHI/: CMakeLists.txt  Doxyfile  Qt.txt  Vulkan.txt  build.bat  glfw.txt
RHI/Source/: RHI.cpp  RHI.h  RHIBuffer.h  RHICommandBuffer.h  RHICommandContext.h  RHIDefinitions.h  RHIFrameBuffer.h  RHIGraphicsPipelineState.h  RHIPipeline.h  RHIPixelFormat.cpp  RHIPixelFormat.h  RHIRaytracing.h  RHIRenderPass.h  RHIRenderTarget.h  RHIResource.h  RHISampler.h  RHIShader.h  RHIShaderBindings.cpp  RHIShaderBindings.h  RHITexture.cpp  RHITexture.h  RHIUpdateTextureRegion2D.h  RHIUpdateTextureRegion3D.h  RHIVertexInput.h
RenderV2/: CMakeLists.txt  build_qt.bat
RenderV2/Source/: main.cpp
RenderV3/: CMakeLists.txt  build_for_linux.bat  build_for_windows.bat  build_for_windows_no_qt.bat
RenderV3/Source/: Resource.qrc
(+589 files in other folders)
